# PhotoTools

./: .gitignore  README.md  analyze_folder.bat  analyze_folder.sh  pyproject.toml  requirements.txt  sort_photos_ratio.py
.history/: README_20250222153726.md  analyze_folder_20250222153728.bat  analyze_folder_20250222154056.bat  analyze_folder_20250222154824.bat  dockerfile_20250222135602  dockerfile_20250222153732  dockerfile_20250222154442  dockerfile_20250222154707  dockerfile_20250222154830  dockerfile_20250222154925  dockerfile_20250222160142
backup_sdcard/: README.md  extract_gps_info.py  last_folders.json  photo_backup.py
backup_sdcard/raycast/: backup-sd-card.sh  launch-photo-backup-(ui).sh
backup_sdcard/web/: index.html  scripts.js  styles.css
focus_stack/: api.py  main.py
japon/: generate_titles.py
